# nail-art-search

./: .dockerignore  .gitignore  .vercel-deploy  .vercel-trigger  ANALYTICS_SETUP.md  CLIP_Colab_Notebook.txt  CLIP_FINE_TUNING_GUIDE.md  CLIP_INTEGRATION_GUIDE.md  COST_OPTIMIZATION.md  DEPLOYMENT_ENV_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.alternative  Dockerfile.minimal  Dockerfile.multistage  Dockerfile.optimized  Makefile  QUICK_START.md  RAILWAY_MODEL_UPLOAD.md  README.md  ROADMAP.md  SEO_OPTIMIZATION_GUIDE.md  SETUP_GUIDE.md  TRAINED_MODEL_SETUP.md  VENDOR_DATA_GUIDE.md  create_booking_table.sql  create_reviews_table.sql  debug_similarity_search.py  deploy.sh  env.example  find_working_images.py  integrate_new_images.py  list_supabase_images.py  prepare_data_for_colab_fixed.py  prepare_large_dataset.py  railway.json  rebuild_index_clip_l14.py  redeploy.sh  setup_demo.py  (+17 more)
backend/: .env_pinecone  .gitignore  Dockerfile  ENHANCED_SIMILARITY_README.md  add_metadata_to_existing_images.py  add_vendors_to_pinecone.py  ariadna_image_assignments.py  assign_40_images.py  assign_real_vendors.py  assign_vendors.py  check_env.py  color_similarity.py  create_demo_index.py  download_trained_model.py  enhanced_clip_embedding.py  enhanced_embed.py  enhanced_ingestion.py  enhanced_query.py  enhanced_search.py  env_template.sh  fine_tune_clip.py  integrate_trained_clip.py  main.py  main_pinecone.py  main_pinecone_simple.py  main_simple.py  manage_vendors.py  metadata_search.py  migrate_images_to_supabase.py  migrate_to_pinecone.py  migrate_to_pinecone_safe.py  nail_art_prompts.py  nail_training_camp.py  pinecone_client.py  prepare_nail_art_dataset.py  (+36 more)
data-pipeline/: add_dfw_vendors.py  batch_embed.py  batch_embed_instagram.py  batch_embed_unsplash.py  collect_vendor_images.py  customize_vendors.py  instagram_scraper.py  manual_nail_dataset.py  pyproject.toml  scrape.py  unsplash_nail_scraper.py
data-pipeline/downloads/: COLLECTION_GUIDE.md  dallas_nail_art_dataset.json  dfw_nail_art_dataset.json  manual_nail_art_dataset.json  nail_art_dataset.json
data-pipeline/downloads/vendors/: dfw_vendors.json  example_vendor.json
embeddings/: embed.py  embed_trained.py  pyproject.toml  query.py
(+36 files in other folders)
