[tool.poetry]
name = "nail-art-data-pipeline"
version = "0.1.0"
description = "Data pipeline for nail art image scraping and processing"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.15.0"
webdriver-manager = "^4.0.1"
fake-useragent = "^1.4.0"
html5lib = "^1.1"
instaloader = "^4.10.1"
openai = "^1.3.0"
faiss-cpu = "^1.7.4"
numpy = "^1.24.3"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39" 